fixed refresh flicker on loading screen

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -15,6 +15,12 @@ body {
 body.no-js {
 	overflow-y: auto;
 }
+#mainscreen {
+	display: none;
+}
+#mainscreen.no-js {
+	display: block;
+}
 
 /* Loading screen */
 
